<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeDetailsFragment"
    tools:showIn="@layout/activity_recipe_details"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        tools:showIn="@layout/recipe_card_view"
        android:id="@+id/recipe_details_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>