<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:elevation="3dp"
    card_view:cardCornerRadius="5dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_ingrident_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C2185B"
            android:padding="@dimen/default_padding"
            tools:text="Ingredient"/>

        <TextView
            android:id="@+id/fragment_ingrident_measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C2185B"
            android:padding="@dimen/default_padding"
            tools:text="measure"/>

        <TextView
            android:id="@+id/fragment_ingrident_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#C2185B"
            android:padding="@dimen/default_padding"
            tools:text="quantity"/>

    </LinearLayout>

</android.support.v7.widget.CardView>
